compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__custom_types__const_imported_no_label.snap
---
source: compiler-core/src/nix/tests/custom_types.rs
expression: "import other\npub const main = other.Two(1)\n"
snapshot_kind: text
---
----- SOURCE CODE
import other
pub const main = other.Two(1)


----- COMPILED NIX
let
  other' = builtins.import ./../other.nix;
  
  main = other'.Two 1;
in
{ inherit main; }
